fixed z-index issue

--- a/src/app/core/layout/layout.component.scss
+++ b/src/app/core/layout/layout.component.scss
@@ -11,7 +11,7 @@
   background-color: var(--sidebar-bg);
   display: flex;
   flex-direction: column;
-  z-index: 1030;
+  z-index: 999;
   // overflow-y: auto;
   border-right: 1px solid rgba(0, 0, 0, 0.05);
 }
@@ -20,13 +20,13 @@
   margin-right: var(--sidebar-width);
   height: 100vh;
   position: relative;
-  z-index: 1030;
+  z-index: 999;
   display: flex;
   flex-direction: column;
   overflow-y: auto;
 }
 
-.container-fluid{
+.container-fluid {
   height: calc(96vh - 70px);
 }
 
