--- a/src/styles.scss
+++ b/src/styles.scss
@@ -257,7 +257,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 2999;
+  z-index: 1000;
 }
 
 .offcanvas-container {
